--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ server.port=7744
 spring.datasource.url=jdbc:postgresql://localhost:5432/telegram
 spring.datasource.password=03091997Shaxa
 spring.datasource.username=postgres
-spring.datasource.initialization-mode=never
+spring.sql.init.mode=never
 spring.jpa.hibernate.ddl-auto=update
 
