--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Build & push Docker image
       uses: mr-smithers-excellent/docker-build-push@v5
       with:
-        image: 949147959/foydali
+        image: 949147959/lorettouz
         tags: latest
         registry: docker.io
         dockerfile: Dockerfile
