--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-#server.port=7744
-spring.datasource.url=jdbc:postgresql://localhost:5432/lorettouz
-spring.datasource.password=03091997Shaxa
+server.port=7744
+spring.datasource.url=jdbc:postgresql://143.198.219.200:5432/lorettouz
+spring.datasource.password=1    
 spring.datasource.username=postgres
 spring.sql.init.mode=never
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
