--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=7744
-spring.datasource.url=jdbc:postgresql://143.198.219.200:5432/lorettouz
+spring.datasource.url=jdbc:postgresql://143.198.219.200:5432/postgres
 spring.datasource.password=1
 spring.datasource.username=postgres
 spring.sql.init.mode=never
