--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-server.port=7744
-spring.datasource.url=jdbc:postgresql://137.184.225.86:5432/postgres
-spring.datasource.password=1
+#server.port=7744
+spring.datasource.url=jdbc:postgresql://localhost:5432/lorettouz
+spring.datasource.password=03091997Shaxa
 spring.datasource.username=postgres
 spring.sql.init.mode=never
 spring.jpa.hibernate.ddl-auto=update
