--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-#server.port=7744
-spring.datasource.url=jdbc:postgresql://localhost:5432/lorettouz
-spring.datasource.password=03091997Shaxa
+server.port=7744
+spring.datasource.url=jdbc:postgresql://139.59.96.139:5432/lorettouz
+spring.datasource.password=1
 spring.datasource.username=postgres
 spring.sql.init.mode=never
 spring.jpa.hibernate.ddl-auto=update
