--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.url=jdbc:postgresql://139.59.96.139:5432/postgres
 spring.datasource.password=1
 spring.datasource.username=postgres
 spring.sql.init.mode=never
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
